# Paint_Clone_SFML

./: .gitignore  CMakeLists.txt  CirclePen.cpp  CirclePen.h  ColorPicker.cpp  ColorPicker.h  CurrentPick.h  EraserTool.cpp  EraserTool.h  FileMenager.h  FillPen.cpp  FillPen.h  Line.h  SizeSet.h  SizeSetter.cpp  SquarePen.cpp  SquarePen.h  TextBox.h  Tool.cpp  Tool.h  Toolbar.cpp  Toolbar.h  TrianglePen.cpp  TrianglePen.h  circle.cpp  circle.h  main.cpp  paint4.vcxproj  square.cpp  square.h  triangle.cpp  triangle.h
src/: main.cpp
x64/Debug/: paint4.exe.recipe  paint4.ilk  vc143.idb
x64/Debug/paint4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  paint4.lastbuildstate
